# AGI-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.docker.yaml  config.example.yaml  config.py
docs/architecture/: ARCHITECTURE_DOCS_INDEX.md  ARCHITECTURE_MAP.md  ARCHITECTURE_README.md  DEPENDENCY_GRAPH.md  REFACTOR_READINESS.md
docs/code-tutor/: README.md  SKILL.md
docs/code-tutor/references/: architectureChecklist.md  businessFlowTemplate.md  debugPlaybook.md  explainPatterns.md  learningPathTemplate.md
frontend/: index.html
src/application/chat/: core_agent.py  core_types.py  ctx_builder.py  ctx_prompt.py  infra_repos.py  mem_stack.py  runtime_task.py  tool_registry.py
src/domain/: tool.py
src/domain/graph/: graph.py
src/domain/knowledge/: extractor.py  kgstore.py  types.py
src/domain/memory/: graphmem.py  longterm.py  preference.py  shortterm.py
src/domain/promptctx/: assembler.py  context.py  schema.py  slot.py  source.py  source_constraints.py  source_planner.py  source_profile.py  source_recall.py  source_taskmem.py  source_tools.py
src/domain/rag/: engine.py  hybrid.py  reranker.py  rewriter.py  splitter.py
src/domain/sandbox/: sandbox.py  types.py  validator.py
src/infrastructure/: eventbus.py  llm.py
src/infrastructure/persistence/: chathistory.py  longterm.py  preference.py  ragchunk.py  snapshot.py
src/infrastructure/platform/: es.py  kafka.py  milvus.py  neo4j.py  postgres.py
src/infrastructure/sandbox/: docker.py  factory.py  local.py
(+5 files in other folders)
