[project]
name = "agi-saber"
version = "1.0.0"
description = "AGI智能助手 - Python版本"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pymilvus>=2.5.0",
    "elasticsearch>=8.17.0",
    "neo4j>=5.27.0",
    "confluent-kafka>=2.6.0",
    "docker>=7.1.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
